# helios

./: .gitattributes  CMakeLists.txt  helios.sln
helios/: helios.vcxproj  helios.vcxproj.filters
helios/src/: body.fs  camera.cpp  camera.h  default_axis.vs  default_orbit.fs  default_planet.fs  default_sun.fs  default_sun.vs  global.cpp  global.h  main.cpp  planet.cpp  planet.h  shader.fs  shader.vs  solarSystem.cpp  solarSystem.h  solarsystem.cpp  solarsystem.h  sun_body.vs  ui.cpp  ui.fs  ui.h  ui_label.fs  ui_quad.vs  ui_textured_quad.fs  ui_textured_quad.vs
res/fonts/: arial.csv
res/shaders/: sun_body.fs
src/: camera.cpp  camera.h  global.cpp  global.h  main.cpp  planet.cpp  planet.h  solarsystem.cpp  ui.cpp
